syntax = "proto3";

package temporal.bridge;

option java_package = "com.surrealdev.temporal.core.proto";
option java_multiple_files = true;

// Placeholder message for future Temporal Core integration.
// This will be expanded to include client config, worker config,
// and workflow/activity task messages.

message BridgeInfo {
  string version = 1;
  string rust_version = 2;
}

// Client configuration for connecting to Temporal server
message ClientConfig {
  string target_url = 1;
  string namespace = 2;
  // Additional fields will be added for TLS, authentication, etc.
}

// Worker configuration
message WorkerConfig {
  string task_queue = 1;
  uint32 max_concurrent_workflow_tasks = 2;
  uint32 max_concurrent_activity_tasks = 3;
}

// Generic result wrapper for error handling across FFI boundary
message BridgeResult {
  oneof result {
    bytes payload = 1;
    BridgeError error = 2;
  }
}

message BridgeError {
  string message = 1;
  string error_type = 2;
}
